Fix some artifacts on small screen

--- a/src/style/component/appFrame.scss
+++ b/src/style/component/appFrame.scss
@@ -32,14 +32,15 @@
       padding: 0.5em;
     }
     @media screen and (max-width: $tablet-size) {
-      padding-left: 16.5em;
-      transition: padding-left 0.2s;
+      padding-left: 0.5em;
+      transform: translateX(15.5em);
+      transition: transform 0.2s;
       &.sidebar-hidden {
-        padding-left: 0.5em;
+        transform: translateX(0);
         & > #sidebar {
-          left: -16.5em;
+          // left: -16.5em;
           visibility: hidden;
-          transition: left 0.2s, visibility 0s linear 0.2s;
+          transition: visibility 0s linear 0.2s;
         }
       }
       & > #sidebar {
@@ -47,10 +48,9 @@
         background-color: #46484b;
         color: #fff;
         box-shadow: 0 0 4px -1px #000;
-        left: 0;
+        left: -16.5em;
         margin-left: 0;
         visibility: visible;
-        transition: left 0.2s;
       }
     }
   }
