--- a/src/style/component/dialog.scss
+++ b/src/style/component/dialog.scss
@@ -22,6 +22,8 @@
   padding: 0.5em 2.5em;
   border-radius: 3px;
   border: 1px solid #ccc;
+  max-width: 100vw;
+  box-sizing: border-box;
   box-shadow: 0.2em 0.4em 4px -1px rgba(0, 0, 0, 0.4);
   animation: 0.2s dialog-appear ease-out;
 }
